--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
   <title>PersonalWebsite</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--  <meta property="og:image" content="assets/meta/image.png">-->
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<img src="assets/meta/image.png" alt="">
   <app-root></app-root>
 </body>
 </html>
