--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
   <title>PersonalWebsite</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--  <meta property="og:image" content="assets/meta/image.png">-->
 
+  <meta property="og:title" content="Heila Al-Mogren">
+  <meta property="og:image" content="http://www.heila.me/assets/meta/image.png">
+  <meta property="og:description" content="Personal site of Heila Al-mogren, a JS & Flutter Dev.">
+  <meta name="description" content="Personal site of Heila Al-mogren, a JS & Flutter Dev.">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<img src="assets/meta/image.png" alt="">
+
   <app-root></app-root>
 </body>
 </html>
